# EDP-Planner

./: .rosinstall  .rosinstall.bak  README.md
Two wheel Robot/mybot_control/: package.xml
Two wheel Robot/mybot_description/urdf/: materials.xacro  mybot.gazebo  mybot.xacro
Two wheel Robot/mybot_gazebo/: package.xml
Two wheel Robot/mybot_gazebo/launch/: mybot_world.launch
UAV_movements/: CMakeLists.txt
UAV_movements/src/: cir_ver1.cpp  str_ver1.cpp
bug_node/: CMakeLists.txt  package.xml
bug_node/Two wheel Robot/mybot_control/launch/: mybot_control.launch
bug_node/Two wheel Robot/mybot_description/: package.xml
bug_node/Two wheel Robot/mybot_description/urdf/: macros.xacro  obstacle.gazebo  obstacle.xacro  obstacle_model.sdf
bug_node/Two wheel Robot/mybot_gazebo/worlds/: mybot.world
bug_node/src/: trial_1.cpp
camera/: CMakeLists.txt
camera/src/: feature.cpp  justtest.cpp  tracking.cpp  trial.cpp  yolotiny.cpp
camera/src/include/: custom.names  obj.names  run_yolo.cpp  run_yolo.h  yolov4-tiny608.cfg
camera_node/camera/: CMakeLists.txt  package.xml
camera_node/camera/src/: trial.cpp  yolotiny.cpp
camera_node/camera/src/include/: run_yolo.cpp  run_yolo.h  yolov4_lais.cfg
data_collection_tool/dataset/: dataset.cpp  dataset.sln
data_collection_tool/generate_traintxt/: textentering.cpp  textentering.sln
offb/src/: eight_ver1.cpp  heading_test1.cpp  path.cpp  traj.cpp
